spacing error fix white box

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ h1 {
   background-color: #fff;
   font-size: 15px;
   font-weight: 800;
-  padding: 15px 15px 15px 35px;
+  padding: 15px 15px 15px 15px;
   width: 30%;
   display: flex;
   justify-content: center;
